--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -2,23 +2,28 @@
 
 {% block body %}
 
-    <h2>Login</h2>
+    <div class="w-25 mx-auto">
+        <div class="mt-4 px-5 py-5 rounded bg-body-secondary">
+            <h2>Login</h2>
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+            {% if message %}
+                <div>{{ message }}</div>
+            {% endif %}
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+            <form action="{% url 'login' %}" method="post">
+                {% csrf_token %}
+                <div class="form-group mb-3">
+                    <label for="username" class="mb-1">Username</label>
+                    <input autofocus class="form-control" type="text" id="username" name="username" placeholder="Enter username">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="password" class="mb-1">Password</label>
+                    <input class="form-control" type="password" name="password" id="password" placeholder="Password">
+                </div>
+                <input class="btn btn-primary" type="submit" value="Login">
+            </form>
+
+            Don't have an account? <a href="{% url 'register' %}">Register here.</a>
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
-
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
-
+    </div>
 {% endblock %}
