--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -2,15 +2,18 @@
 {% load static %}
 
 {% block body %}
-    <div class="w-100 text-center pt-3">
-        <button type="button" id="new-post-modal-button" class="btn btn-secondary w-50 rounded-pill" data-bs-toggle="modal" data-bs-target="#newPostModal">
-            New Post
-        </button>
-        <div class="modal fade" id="newPostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="w-100 pt-3" id="posts">
+        <div class="d-block w-50 mx-auto my-3">
+            <button type="button" id="new-post-modal-button" class="btn btn-primary w-100 rounded-pill" data-bs-toggle="modal" data-bs-target="#newPostModal">
+                New Post
+            </button>
+        </div>
+    </div>
+    <div class="modal fade" id="newPostModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">New Post</h1>
+                    <h1 class="modal-title fs-5" id="ModalLabel">New Post</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -21,7 +24,6 @@
                     <div id="new-post-validation" class="w-100"></div>
                 </div>
             </div>
-        </div>
         </div>
     </div>
 {% endblock %}
