--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -10,9 +10,8 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg p-4" style="background-color: #9aa6ff;">
             <a class="navbar-brand" href="#">Network</a>
-          
             <div>
               <ul class="navbar-nav mr-auto nav-pills">
                 {% if user.is_authenticated %}
