--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -10,34 +10,36 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg p-4" style="background-color: #9aa6ff;">
-            <a class="navbar-brand" href="#">Network</a>
-            <div>
-              <ul class="navbar-nav mr-auto nav-pills">
-                {% if user.is_authenticated %}
+        <nav class="navbar navbar-expand-lg py-4" style="background-color: #c4cbff;">
+            <div class="w-75 mx-auto d-flex">
+                <a class="navbar-brand" href="#">Network</a>
+                <div>
+                <ul class="navbar-nav mr-auto nav-pills">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><strong>{{ user.username }}</strong></a>
+                        </li>
+                    {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>{{ user.username }}</strong></a>
+                    <a class="nav-link" id="all-posts-nav" href="#">All Posts</a>
                     </li>
-                {% endif %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'index' %}">All Posts</a>
-                </li>
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Following</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Log In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Register</a>
-                    </li>
-                {% endif %}
-              </ul>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Following</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}">Register</a>
+                        </li>
+                    {% endif %}
+                </ul>
+                </div>
             </div>
           </nav>
         
