--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -21,11 +21,11 @@
                         </li>
                     {% endif %}
                     <li class="nav-item">
-                    <a class="nav-link" id="all-posts-nav" href="#">All Posts</a>
+                    <a class="nav-link" id="all-posts-nav" href="/">All Posts</a>
                     </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Following</a>
+                            <a class="nav-link" id="following-posts-nav"  href="#">Following</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
@@ -43,7 +43,7 @@
             </div>
           </nav>
         
-        <div class="body">
+        <div class="body pt-3">
             {% block body %}
             {% endblock %}
         </div>
