Final adjustments, project finished

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -5,7 +5,7 @@
     <div id="all-posts-page" class="page">
         <div class="w-100" id="posts">
             {% if user.is_authenticated %}
-                <div class="d-block w-50 mx-auto my-3">
+                <div class="new-post-button-div d-block mx-auto my-3">
                     <button type="button" id="new-post-modal-button" class="btn btn-primary w-100 rounded-pill" data-bs-toggle="modal" data-bs-target="#newPostModal">
                         New Post
                     </button>
