--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -1,3 +1,27 @@
 .like-div:hover {
     cursor: pointer;
 }
+
+.card-header-link:hover {
+    background-color: #0d6efd;
+    color: white;
+}
+
+.card, .new-post-button-div {
+    width: 50% !important;
+}
+
+.login-div {
+    width: 25%;
+}
+
+@media (max-width: 992px) {
+
+    .card, .new-post-button-div {
+        width: 75% !important;
+    }
+
+    .login-div {
+        width: 50%;
+    }
+}
