--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="w-25 mx-auto">
+    <div class="login-div mx-auto">
         <div class="mt-4 px-5 py-5 rounded bg-body-secondary">
             <h2>Login</h2>
 
