fixes and logs removed

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -23,7 +23,7 @@
                         <textarea rows="10" class="form-control" id="new-post-content" placeholder="What is happening?"></textarea>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" id="new-post-button" class="btn btn-secondary w-100">Post</button>
+                        <button type="button" id="new-post-button" class="btn btn-primary w-100">Post</button>
                         <div id="new-post-validation" class="w-100"></div>
                     </div>
                 </div>
